# sikong

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  capture.go  go.mod  install.sh  package.json  reasonix.toml  tsconfig.json
.antigravitycli/: 75bda9ef-ec0a-43b3-9005-103969ccb903.json
.claude/: settings.json
design/: README.md  assistant-agent-loop.md  cli.md  client-agent.md  client-ui-user-stories.md  command-surface.md  console-ui-generation.md  coordination-engine.md  daemon-runtime.md  design-doc-survey.md  design-language-catalog.md  development-philosophy.md  dogfood.md  down-to-earth.md  efficiency-analysis.md  eval-framework.md  evaluation-framework.md  governance-model.md  implementation-plan.md  practice-theory-unity.md  product-vision.md  project-shape.md  prompt-guidance.md  recursive-agent-engine.md  task-run-delta-report.md  workspace-management.md
development-log/: 2025-01-design-review.md  2026-06-17-architecture-review-consolidated.md  2026-06-17-architecture-review.md  2026-06-21.md  2026-06.md  2026-07-01-eve-deep-research.md  2026-07-01-eve-vercel-research.md  2026-07-01-prompt-split-eval.md  2026-07.md  governance-harness-migration-analysis.md  governance-placement-analysis.md
scripts/: analyze-cost.py  analyze-time.py  build-release-darwin-arm64.sh  build-release-rust.sh  deploy-site.sh  install-local-dev.sh  install.sh  patch-cursor-sdk-standalone.ts  repl.ts  stats.py  sync-client-dist.sh
site/: .gitignore  index.html  install.sh  vercel.json
src/: README.md  agent_run.rs  agent_worker.rs  backends.ts  cancel.rs  (+12 more)
(+333 files in other folders)
