[package]
name = "siko"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/siko-macros"]

[dependencies]
async-recursion = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["yaml"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
siko-macros = { path = "crates/siko-macros" }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "sync",
  "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v7"] }
